[package]
name = "advent-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
eyre = "0.6.5"
itertools = "0.10.1"
nom = { version = "7.1.0", features = ["alloc"] }
